[gd_scene load_steps=4 format=3 uid="uid://do7mx57l1v3qh"]

[ext_resource type="Script" uid="uid://de53kcvow37d2" path="res://scenes/player/_player.gd" id="1_bpha1"]
[ext_resource type="PackedScene" uid="uid://on1awbl8kp1s" path="res://scenes/items/flashlight/flashlight.tscn" id="2_g2els"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g2els"]
size = Vector3(0.523438, 0.01, 0.683594)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_bpha1")

[node name="StaminaStateLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0162811, 1.52277, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0281163, -0.8443, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.872325, 0.488926, 0, -0.488926, 0.872325, 0, 4.19169, 4.42407)
fov = 80.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerState" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -36.0
grow_horizontal = 0
grow_vertical = 0
text = "PlayerState"

[node name="FlashLightState" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
offset_right = 160.0
offset_bottom = 43.0
text = "FLASHLIGHT STATE"

[node name="StaminaState" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="StaminaValue" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StaminaHUD" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 688.0
offset_right = 180.0
offset_bottom = 715.0

[node name="BatteryHUD" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_top = 718.0
offset_right = 180.0
offset_bottom = 745.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00312155, -0.0238863, -2.74181e-05)
shape = SubResource("BoxShape3D_g2els")

[node name="Flashlight" parent="." instance=ExtResource("2_g2els")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.683396, 0)
